--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@raycast/api": "^1.56.0",
     "@raycast/utils": "^1.9.0",
     "arxivjs": "^0.0.11",
+    "notion-types": "^6.16.0",
     "use-debounce": "^9.0.4"
   },
   "devDependencies": {
