--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "commands": [
     {
-      "name": "index",
+      "name": "addPaper",
       "title": "Add a research paper",
       "description": "Add a research paper from Arxiv to a Notion database with all the metadata included.",
       "mode": "view",
@@ -45,6 +45,7 @@
     "@raycast/api": "^1.56.0",
     "@raycast/utils": "^1.9.0",
     "arxivjs": "^0.0.11",
+    "got": "^11.8.2",
     "notion-types": "^6.16.0",
     "use-debounce": "^9.0.4"
   },
